--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
-
+.DS_Store
 ## User settings
 xcuserdata/
 
@@ -54,7 +54,7 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+ Pods/*
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
